# terminal-rag-portfolio

./: .prettierrc  README.md  index.html  package-lock.json  package.json  railway.toml  tailwind.config.ts  vite.config.ts
backend/: pyproject.toml  requirements.txt
docs/: PRD.md  README.md  backend-spec.md  frontend-spec.md  ui-ux-spec.md
docs/old/: backend-spec.md  frontend-spec-old.md  prd.md
frontend/: .editorconfig  .stylelintrc.json  eslint.config.js  index.html
frontend/public/assets/blogs/: config.yaml
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: Navigation.tsx  StaticNoiseBackground.tsx
frontend/src/components/blog/: BlogTags.tsx
frontend/src/components/contact/: QrCodeDisplay.tsx
frontend/src/components/projects/: ProjectCard.tsx
frontend/src/components/resume/: GameStateUI.tsx  ResumeContent.tsx  ResumeProgressBar.tsx  useGameLogic.ts
frontend/src/data/: shortcutsData.ts  skillsData.ts
frontend/src/hooks/: useDebouncedEffect.ts  useEffectOnce.ts  useSuspendAnimations.ts
frontend/src/types/: blog.ts  skill.ts
public/assets/blogs/content/: neural-networks-explained.md  vector-databases-similarity-search.md
src/: App.tsx  index.css  main.tsx
src/components/: AsciiLogo.tsx  Footer.tsx  Header.tsx  Layout.tsx  RetroTerminalBackground.tsx  StaticNoiseBackground.tsx  Terminal.tsx  TypewriterEffect.tsx
src/components/blog/: BlogCard.tsx  BlogList.tsx  BlogSearch.tsx  BlogTags.tsx  KeyboardNavHelp.tsx  ViewModeToggle.tsx
src/components/contact/: CommitHistory.tsx  ContactForm.tsx  QrCodeDisplay.tsx
src/components/projects/: ProjectCard.tsx  ProjectDetail.tsx  ProjectList.tsx
src/components/resume/: GameDialog.tsx  GameObjects.tsx  Player.tsx  ResumeContent.tsx  ResumeGame.tsx  ResumeProgressBar.tsx  useGameLogic.ts
src/components/resume/game/: GameDialog.tsx  GameObjects.tsx  GameStateUI.tsx  Player.tsx  types.ts  useGameLogic.ts
src/components/skills/: InterestCard.tsx  SkillBar.tsx  SkillCategory.tsx  SkillsNetwork.tsx
src/data/: blogData.ts  resumeData.ts  skills.ts  skillsData.ts
src/data/blog/: config.yaml
src/data/blog/content/: llm-fine-tuning-techniques.md  neural-networks-explained.md  vector-databases-similarity-search.md
src/hooks/: useAnimationFrameThrottle.ts  useIsVisible.ts  usePreventRapidNavigation.ts
src/pages/: Blog.tsx  BlogPost.tsx  Contact.tsx  Index.tsx  Projects.tsx  Resume.tsx  Skills.tsx
src/types/: blog.ts  project.ts  skill.ts  terminal.ts
